# pre-commit-image

./: .cz.toml  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  cz.toml  flake.nix  pyproject.toml
.github/workflows/: release.yml
src/pre_commit_image/: __main__.py  command.py  errors.py
src/pre_commit_image/steps/: __init__.py  compress.py  resize.py  save.py
src/pre_commit_image/strategies/: avif.py  base.py  heif.py  jpeg.py  png.py  svg.py  webp.py
src/pre_commit_image/utils/: file.py
tests/: test_command.py  test_strategies_avif.py  test_strategies_heif.py  test_strategies_jpeg.py  test_strategies_png.py  test_strategies_svg.py  test_strategies_webp.py  test_utils_file.py
tests/fixtures/: 200x200.avif  200x200.heif
